# LinuxBasicsSS2020

./: README.md
src/p1/: array.sh  calc.sh  gen_names.sh  loops.sh  promt.sh  variables.sh
src/p1/keydir/: example.conf  example_template.conf  get_usernames.sh  update_users.sh
src/p2/: Makefile  build.sh  helloworld  main.cpp  prog
src/p2/include/: MyLibrary.h
src/p2/lib/: hello_world.h
src/p2/p2_1/: Makefile  build.sh
src/p2/p2_1/lib/: hello_world.cpp
src/p2/p2_2/: Makefile  linux-20.aux  linux-20.bib  linux-20.tex
src/p3/: CMakeLists.txt
src/p3/src/: MyLibrary.cpp  helloworld.cpp
